--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@
   --first-color: hsl(266, 89%, 61%);
   --text-color: hsl(252, 26%, 3%);
   --body-color: hsl(0, 0%, 96%);
-  --line-color: hsl(0, 0%, 10%);
+  --line-color: hsla(0, 0%, 10%, 0.4);
 
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
@@ -98,7 +98,7 @@ button {
 :root.dark-mode {
   --text-color: hsl(0, 0%, 100%);
   --body-color: hsl(252, 26%, 3%);
-  --line-color: hsl(0, 0%, 89%);
+  --line-color: hsla(0, 0%, 89%, 0.4);
 }
 
 :root.dark-mode button .moon {
@@ -118,6 +118,45 @@ button {
 .container {
   max-width: 1120px;
   margin-inline: 1.5rem;
+}
+
+.grid {
+  display: grid;
+  gap: 1rem;
+}
+
+.section {
+  padding-block: 1rem 0;
+}
+
+.section__title-1,
+.section__title-2 {
+  position: relative;
+  font-size: var(--h1-font-size);
+  width: max-content;
+  margin: 0.75rem auto 2rem;
+}
+
+.section__title-1 span,
+.section__title-2 span {
+  z-index: 5;
+  position: relative;
+}
+
+.section__title-1::after,
+.section__title-2::after {
+  content: "";
+  width: 40px;
+  height: 28px;
+  background-color: hsla(266, 89%, 61%, 0.2);
+  position: absolute;
+  top: -4px;
+  right: -8px;
+}
+
+.section__title-2::after {
+  top: initial;
+  bottom: -4px;
 }
 
 .main {
@@ -322,7 +361,7 @@ button .sun {
   display: none;
 }
 
-/* animation menu hamburguer */
+/* Animate menu icon */
 @keyframes rotateTopBurger {
   0% {
     top: 0;
@@ -405,14 +444,172 @@ button .sun {
 /* Active link */
 
 /*=============== HOME ===============*/
+.home__container {
+  padding-top: 4rem;
+}
+
+.home__name {
+  font-size: var(--biggest-font-size);
+  color: var(--text-color);
+  text-align: center;
+}
+
+.home__profile {
+  position: relative;
+  justify-self: center;
+}
+
+.home__image {
+  width: 220px;
+}
+
+.home__img {
+  position: relative;
+  z-index: 10;
+}
+
+.home__shadow {
+  width: 100%;
+  height: 100%;
+  background-color: var(--body-color);
+  position: absolute;
+  bottom: -0.75rem;
+  right: -0.75rem;
+  border: 4px solid var(--line-color);
+  z-index: 5;
+}
+
+.home__social {
+  height: max-content;
+  position: absolute;
+  left: -3rem;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  display: grid;
+  row-gap: 1rem;
+}
+
+.home__social-link {
+  background-color: var(--text-color);
+  color: var(--body-color);
+  font-size: 1.25rem;
+  padding: 6px;
+  display: grid;
+  place-items: center;
+  transition: background-color 0.3s;
+}
+
+.home__social-link:hover {
+  background-color: black;
+}
+
+.home__info {
+  margin-top: 2rem;
+}
+
+.home__description {
+  text-align: center;
+  color: var(--text-color);
+  margin-bottom: 1rem;
+}
+
+.home__description b {
+  background: linear-gradient(
+    90deg,
+    hsla(266, 89%, 61%, 0.8),
+    hsla(14, 98%, 50%, 0)
+  );
+}
+
+.home__scroll {
+  display: block;
+  width: max-content;
+  margin: 0 auto;
+}
+
+.arrow-down {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.75rem;
+  gap: 0.25rem;
+  color: var(--line-color);
+  cursor: pointer;
+  overflow: hidden;
+}
+.arrow-down i:nth-child(1) {
+  animation: scroll-down 2s infinite ease-in-out;
+  animation-delay: 0.3s;
+  animation-fill-mode: backwards;
+}
+.arrow-down i:nth-child(2) {
+  animation: scroll-down 2s infinite ease-in-out;
+  animation-delay: 0.6s;
+  animation-fill-mode: backwards;
+}
+.arrow-down i:nth-child(3) {
+  animation: scroll-down 2s infinite ease-in-out;
+  animation-delay: 0.9s;
+  animation-fill-mode: backwards;
+}
 
 /* Animate scroll icon */
+@keyframes scroll-down {
+  0% {
+    transform: translateY(-1rem);
+    opacity: 0;
+  }
+  50% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(0.6rem);
+    opacity: 0;
+  }
+}
 
 /*=============== BUTTON ===============*/
 
-/*=============== ABOUT ===============*/
+/*=============== SKILLS ===============*/
+.skills__container {
+  padding-top: 1rem;
+}
 
-/*=============== SERVICES ===============*/
+.skills__name {
+  font-weight: var(--font-regular);
+  font-size: --h2-font-size;
+  line-height: 120%;
+  letter-spacing: -0.02em;
+  color: var(--text-color);
+}
+
+.skills__name::before,
+.skills__name::after {
+  margin: 0 0.5rem;
+  color: #9245f5;
+  font-weight: var(--font-bold);
+}
+
+.skills__name::before {
+  content: "<";
+}
+
+.skills__name::after {
+  content: "/>";
+}
+
+.skills__list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: var(--text-color);
+  column-gap: 2.5rem;
+  font-size: 32px;
+}
+/*=============== ABOUT ===============*/
 
 /*=============== PROJECTS ===============*/
 
