--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -506,7 +506,7 @@ button .sun {
 }
 
 .home__info {
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .home__description {
@@ -568,12 +568,45 @@ button .sun {
 }
 
 /*=============== BUTTON ===============*/
-
-/*=============== SKILLS ===============*/
-.skills__container {
-  padding-top: 1rem;
+.button,
+.button__ghost {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 0.5rem;
 }
 
+.button {
+  background-color: var(--first-color);
+  padding: 1.1rem 1.5rem;
+  color: #fff;
+  font-weight: var(--font-medium);
+  transition: background-color 0.4s;
+}
+
+.button i {
+  font-size: 1.25rem;
+}
+
+.button:hover {
+  background-color: #627;
+}
+
+.button__ghost {
+  border: 3px solid #fff;
+  color: var(--first-color);
+  padding: 0.5rem;
+  transition: border 0.4, color 0.4;
+}
+
+.button__ghost i {
+  font-size: 1.25rem;
+}
+
+.button__ghost:hover {
+  border: 3px solid #425;
+}
+/*=============== SKILLS ===============*/
 .skills__name {
   font-weight: var(--font-regular);
   font-size: var(--h2-font-size);
@@ -612,13 +645,39 @@ button .sun {
 }
 
 /*=============== ABOUT ===============*/
-
-/*=============== PROJECTS ===============*/
-/*.projects {
-  background-color: #123456;
+.about {
+  background-color: var(--body-color);
   transition: background-color 0.4s;
-}*/
+}
 
+.about__container {
+  row-gap: 0;
+}
+
+.about__profile {
+  position: relative;
+  justify-self: center;
+}
+
+.about__info {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.about__description {
+  position: relative;
+  text-align: justify;
+  color: var(--text-color);
+  margin-bottom: 1.5rem;
+}
+
+.about__buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1rem;
+}
+/*=============== PROJECTS ===============*/
 .projects__container {
   row-gap: 2rem;
 }
