--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -292,7 +292,7 @@ button {
   width: 100%;
 }
 
-.nav__item:nth-child(4) .nav__link {
+.nav__item:nth-child(5) .nav__link {
   display: inline-block;
   padding: 0.625rem 1.25rem;
   border-radius: 50rem;
@@ -300,13 +300,13 @@ button {
   transition: all 0.2s ease-in;
 }
 
-.nav__item:nth-child(4) .nav__link:hover {
+.nav__item:nth-child(5) .nav__link:hover {
   background-color: var(--first-color);
   color: var(--white-color);
 }
 
-.nav__item:nth-child(4) .nav__link::before,
-.nav__item:nth-child(4) .nav__link::after {
+.nav__item:nth-child(5) .nav__link::before,
+.nav__item:nth-child(5) .nav__link::after {
   content: none;
 }
 
@@ -607,8 +607,7 @@ button .sun {
 }
 
 /*=============== BUTTON ===============*/
-.button,
-.button__ghost {
+.button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -631,20 +630,6 @@ button .sun {
   background-color: hsl(266, 89%, 56%);
 }
 
-.button__ghost {
-  border: 3px solid var(--line-color);
-  color: var(--first-color);
-  padding: 0.5rem;
-  transition: border 0.4s, color 0.4s;
-}
-
-.button__ghost i {
-  font-size: 1.25rem;
-}
-
-.button__ghost:hover {
-  border: 3px solid hsl(266, 89%, 56%);
-}
 /*=============== SKILLS ===============*/
 .skills__name {
   font-weight: var(--font-regular);
@@ -700,17 +685,15 @@ button .sun {
 
 .about__description {
   position: relative;
-  text-align: justify;
   color: var(--text-color);
   margin-bottom: 1.5rem;
 }
 
-.about__buttons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  column-gap: 1rem;
+.about__description a {
+  color: var(--first-color);
+  font-weight: var(--font-semi-bold);
 }
+
 /*=============== PROJECTS ===============*/
 .projects__container {
   row-gap: 2rem;
@@ -719,7 +702,7 @@ button .sun {
 .projects__card {
   padding: 1rem 1rem 2rem;
   border-bottom: 1px solid var(--line-color);
-  /* background-color: var(--line-color); */
+  display: grid;
 }
 
 .projects__image {
@@ -803,8 +786,59 @@ button .sun {
 
 .footer__container {
   padding-block: 1.5rem 1.5rem;
-  row-gap: 6rem;
+  row-gap: 2rem;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.footer__description {
+  padding: 0 2rem 1rem;
+}
+
+.footer__description a {
+  color: var(--first-color);
+  font-weight: var(--font-semi-bold);
+}
+
+.footer__social-link {
+  color: var(--text-color);
+  font-size: 1.75rem;
+  padding: 6px;
+  border-radius: 50%;
+  display: inline-grid;
+  text-align: center;
+  transition: transform 0.3s;
+}
+
+.footer__social-link:hover {
+  transform: scale(1.1);
+  color: #fff;
+}
+
+.footer__social-link:hover:nth-child(1) {
+  color: #0a66c2;
+}
+
+.footer__social-link:hover:nth-child(2) {
+  color: #1e3050;
+}
+
+.footer__social-link:hover:nth-child(3) {
+  background-clip: initial;
+  color: transparent;
+  background-image: linear-gradient(
+    to right,
+    #fdf497,
+    #fd5949,
+    #d6249f,
+    #285aeb
+  );
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
 .footer__copy {
@@ -951,7 +985,8 @@ button .sun {
     grid-template-columns: repeat(2, 460px);
     gap: 2rem 4rem;
     align-items: center;
-    padding-block: 5.5rem;
+    padding-block: 7rem;
+    padding-bottom: 2rem;
   }
 
   .home__name {
@@ -1012,34 +1047,17 @@ button .sun {
     gap: 1rem 9rem;
   }
 
-  .about__buttons {
-    margin-top: 3rem;
-    justify-content: initial;
-  }
-
-  .button__ghost {
-    padding: 0.75rem;
-  }
-
-  .button__ghost i {
-    font-size: 1.5rem;
-  }
-
   .projects__container {
     grid-template-columns: repeat(3, 352px);
     padding-block: 3rem 1rem;
   }
 
   .projects__card {
-    padding: 1.25rem 1.25rem 2.25rem;
+    padding: 1.25rem;
   }
 
   .projects__image {
     margin-bottom: 1rem;
-  }
-
-  .projects__content {
-    margin-bottom: 2rem;
   }
 
   .projects__button {
