--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,7 +37,6 @@
     --biggest-font-size: 4.5rem;
     --h1-font-size: 3rem;
     --h2-font-size: 1.5rem;
-    --h3-font-size: 1.25rem;
     --normal-font-size: 1rem;
     --small-font-size: 0.875rem;
   }
@@ -188,7 +187,7 @@ button {
   color: #1e3050;
 }
 
-.instagram:hover {
+/* .instagram:hover {
   background-clip: initial;
   color: transparent;
   background-image: linear-gradient(
@@ -200,7 +199,7 @@ button {
   );
   -webkit-background-clip: text;
   color: transparent;
-}
+} */
 
 .hover-link:hover {
   color: var(--hover-effect);
@@ -546,7 +545,6 @@ button .sun {
 }
 
 .home__description {
-  text-align: center;
   margin-bottom: 1rem;
 }
 
@@ -628,6 +626,7 @@ button .sun {
 /*=============== SKILLS ===============*/
 .skills__list {
   display: flex;
+  overflow: hidden;
   flex-direction: row;
   justify-content: center;
   column-gap: 2.5rem;
@@ -707,7 +706,7 @@ button .sun {
 
 .projects__img {
   max-width: 100%;
-  height: auto;
+  height: 12.5rem;
 }
 
 .projects__content {
@@ -751,7 +750,18 @@ button .sun {
 }
 
 .projects__description {
-  height: 70px;
+  max-height: 70px;
+  overflow-y: auto;
+  position: relative;
+}
+
+.projects__description::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 20px;
 }
 
 .projects__buttons {
@@ -894,6 +904,9 @@ button .sun {
 @media screen and (min-width: 768px) {
   .projects__container {
     grid-template-columns: repeat(2, 350px);
+  }
+  .projects__description::after {
+    height: 10px;
   }
 }
 
